# ckanext-clamav

./: CHANGELOG.md  dev-requirements.txt  pyproject.toml  setup.cfg
ckanext/clamav/: adapters.py  config.py  plugin.py  utils.py
ckanext/clamav/assets/: webassets.yml
ckanext/clamav/assets/js/: clamav-scan-file.js
ckanext/clamav/logic/: action.py  schema.py  validators.py
ckanext/clamav/templates/package/: resource_edit_base.html
ckanext/clamav/templates/snippets/: clamav_scan.html
ckanext/clamav/tests/: test_clamav_local.py  test_clamav_tcp.py  test_config.py  test_mocked_clamav.py  test_plugin.py
